--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
-<h2 class="page-header">Dashboard</h2>
-<p>
-  dashboard works!
-</p>
+<div class="container">
+	<h2 class="page-header">Dashboard</h2>
+	<p>
+	  dashboard works!
+	</p>
+</div>
