--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -1,51 +1,40 @@
-<!--h2 class="page-header">Login</h2>
-	<form (submit) = "onLoginSubmit()">
-		<div class="form-group">
-			<label>Username</label>
-			<input type="text" [(ngModel)]="username" name="username" class="form-control input-sm">
-		</div>
-		<div class="form-group">
-			<label>Password</label>
-			<input type="password" [(ngModel)]="password" name="password" class="form-control input-sm">
-		</div>
-		<input type="submit" class="btn btn-primary" value="Login">
-	</form-->
-
 <div class="login2background">
-    <div class="container">  
-        <div class="col-lg-6 col-md-6 col-sm-8  loginbox">
-            <div class=" row">
-                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-6">
-                    <img src="../../assets/LOGOplaceholder.png" alt="Logo" class="logo"> 
+    <form (submit) = "onLoginSubmit()"> 
+        <div class="container">
+            <div class="col-lg-6 col-md-6 col-sm-8  loginbox">
+                <div class=" row">
+                    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-6">
+                        <img src="../../assets/LOGOplaceholder.png" alt="Logo" class="logo"> 
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6  ">
+                        <span class="singtext" >Login</span>   
+                    </div>      
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6  ">
-                    <span class="singtext" >Login</span>   
-                </div>      
+                <div class=" row loginbox_content">
+                    <div class="input-group input-group-sm" >
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-user"></span>
+                        </span>
+                        <input [(ngModel)]="username" name="username" class="form-control" type="text" placeholder="Username"  >
+                    </div>
+                    <br>
+                    <div class="input-group input-group-sm">
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-lock"></span>
+                        </span>
+                        <input [(ngModel)]="password" name="password" class="form-control" type="password" placeholder="Password" >
+                    </div>              
+                </div>
+                <div class="row ">                   
+                    <!--div class="col-lg-8 col-md-8  col-sm-8 col-xs-7 forgotpassword "> 
+                        <a href="#"  > Forgot Username / Password?</a>                    
+                    </div-->
+                    <div class="col-lg-4 col-md-4 col-sm-4  col-xs-5"> 
+                    <input type="submit" class="btn btn-default submit-btn" value="Submit">       
+                    </div>
+                </div>
             </div>
-            <div class=" row loginbox_content">
-                <div class="input-group input-group-sm" >
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-user"></span>
-                    </span>
-                    <input class="form-control" type="text" placeholder="Username"  >
-                </div>
-                <br>
-                <div class="input-group input-group-sm">
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-lock"></span>
-                    </span>
-                    <input class="form-control" type="password" placeholder="Password" >
-                </div>              
-            </div>
-            <div class="row ">                   
-                <div class="col-lg-8 col-md-8  col-sm-8 col-xs-7 forgotpassword "> 
-                    <a href="#"  > Forgot Username / Password?</a>                    
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-4  col-xs-5 ">        
-                    <a href="#" class=" btn btn-default submit-btn">Submit<span class="glyphicon glyphicon-log-in"></span> </a> 
-                </div>
-            </div>
+        	<div class="col-lg-6 col-md-6 col-sm-4 "></div>
         </div>
-    	<div class="col-lg-6 col-md-6 col-sm-4 "></div>
-    </div>
+    </form>
 </div>
