--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,22 +1,54 @@
-<div class="container">
-	<h2 class="page-header">Register</h2>
-	<form (submit) = "onRegisterSubmit()">
-		<div class="form-group">
-			<label>Name</label>
-			<input type="text" [(ngModel)]="name" name="name" class="form-control input-sm">
-		</div>
-		<div class="form-group">
-			<label>Username</label>
-			<input type="text" [(ngModel)]="username" name="username" class="form-control input-sm">
-		</div>
-		<div class="form-group">
-			<label>E-mail</label>
-			<input type="text" [(ngModel)]="email" name="email" class="form-control input-sm">
-		</div>
-		<div class="form-group">
-			<label>Password</label>
-			<input type="password" [(ngModel)]="password" name="password" class="form-control input-sm">
-		</div>
-		<input type="submit" class="btn btn-primary" value="Submit">
-	</form>
+<div class="register2background">
+    <form (submit) = "onRegisterSubmit()"> 
+        <div class="container">
+            <div class="col-lg-6 col-md-6 col-sm-8  registerbox">
+                <div class=" row">
+                    <div class="col-lg-8 col-md-8 col-sm-8 col-xs-6">
+                        <img src="../../assets/LOGOplaceholder.png" alt="Logo" class="logo"> 
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-6  ">
+                        <span class="singtext" >Register</span>   
+                    </div>      
+                </div>
+                <div class="row registerbox_content ">
+                    <div class="input-group input-group-sm form-group" >
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-user"></span>
+                        </span>
+                        <input [(ngModel)]="name" name="name" name="name" class="form-control" type="text" placeholder="Name" >
+                    </div>
+                    <br>
+                    <div class="input-group input-group-sm form-group">
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-lock"></span>
+                        </span>
+                        <input [(ngModel)]="username" name="username" class="form-control" type="username" placeholder="Username" >
+                    </div>
+                    <br>
+                    <div class="input-group input-group-sm form-group">
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-lock"></span>
+                        </span>
+                        <input [(ngModel)]="email" name="email" class="form-control" type="email" placeholder="Email" >
+                    </div>   
+                    <br>
+                    <div class="input-group input-group-sm form-group">
+                        <span class="input-group-addon">
+                            <span class="glyphicon glyphicon-lock"></span>
+                        </span>
+                        <input [(ngModel)]="password" name="password" class="form-control" type="password" placeholder="Password" >
+                    </div>                 
+                </div>
+                <div class="row ">                   
+                    <!--div class="col-lg-8 col-md-8  col-sm-8 col-xs-7 forgotpassword "> 
+                        <a href="#"  > Forgot Username / Password?</a>                    
+                    </div-->
+                    <div class="col-lg-4 col-md-4 col-sm-4  col-xs-5"> 
+                    <input type="submit" class="btn btn-default submit-btn" value="Submit">       
+                    </div>
+                </div>
+            </div>
+        	<div class="col-lg-6 col-md-6 col-sm-4 "></div>
+        </div>
+    </form>
 </div>
