Dodao profile i members

--- a/angular-src/src/app/components/memberstable/memberstable.component.html
+++ b/angular-src/src/app/components/memberstable/memberstable.component.html
@@ -1,57 +1,57 @@
 <div class="panel panel-default">
-              <div class="panel-body">
-	                <div class="col-md-12 col-sm-12 col-xs-12" >
-		              	<div class="col-md-8 col-sm-8 col-xs-9">
-			                <div class="row searchbar">
-				                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-				                <input class="form-control" type="text" placeholder="Search"> 
-			                </div>
-		                </div>
-		                <div class="col-md-4 col-sm-3 col-xs-3">
-							<input id="addbtn" type="AddNewMember" class="btn btn-default submit-btn responsbtn" value="Add New Member">
-						</div> 
-					</div>
-                <br>
-                <table id="memberstable" class="table table-striped table-hover">
-                      <thead>
-                        <tr>
-                          <th>Name</th>
-                          <th>Debt</th>
-                          <th>Start Date</th>
-                          <th>Expieres</th>
-                          <th></th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td>random data TXT</td>
-                          <td>random data Number</td>
-                          <td>random data date</td>
-                          <td>random data date</td>
-                          <td><input type="DeleteMember" class="btn btn-danger responsbtn" value="X"></td>
-                        </tr>
-                        <tr>
-                          <td>random data TXT</td>
-                          <td>random data Number</td>
-                          <td>random data date</td>
-                          <td>random data date</td>
-                          <td><input type="DeleteMember" class="btn btn-danger responsbtn" value="X"></td>
-                        </tr>
-                        <tr>
-                          <td>random data TXT</td>
-                          <td>random data Number</td>
-                          <td>random data date</td>
-                          <td>random data date</td>
-                          <td><input type="DeleteMember" class="btn btn-danger responsbtn" value="X"></td>
-                        </tr>
-                        <tr>
-                          <td>random data TXT</td>
-                          <td>random data Number</td>
-                          <td>random data date</td>
-                          <td>random data date</td>
-                          <td><input type="DeleteMember" class="btn btn-danger responsbtn" value="X"></td>
-                        </tr>
-                      </tbody>
-                    </table>
+      <div class="panel-body">
+          <div class="col-md-12 col-sm-12 col-xs-12 centeralign" >
+            	<div class="col-md-8 col-sm-8 col-xs-9">
+                <div class="row searchbar">
+	                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+	                <input class="form-control" type="text" placeholder="Search"> 
+                </div>
               </div>
+              <div class="col-md-4 col-sm-3 col-xs-3">
+			          <input id="addbtn" type="button" class="btn btn-default submit-btn responsbtn" value="Add New Member">
+		          </div> 
+	         </div>
+          <br>
+        <table id="memberstable" class="table table-striped table-hover">
+              <thead>
+                <tr>
+                  <th>Name</th>
+                  <th>Debt</th>
+                  <th>Start Date</th>
+                  <th>Expieres</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><a>random data TXT</a></td>
+                  <td>random data Number</td>
+                  <td>random data date</td>
+                  <td>random data date</td>
+                  <td><input type="button" class="btn btn-danger responsbtn" value="X"></td>
+                </tr>
+                <tr>
+                  <td><a>random data TXT</a></td>
+                  <td>random data Number</td>
+                  <td>random data date</td>
+                  <td>random data date</td>
+                  <td><input type="button" class="btn btn-danger responsbtn" value="X"></td>
+                </tr>
+                <tr>
+                  <td><a>random data TXT</a></td>
+                  <td>random data Number</td>
+                  <td>random data date</td>
+                  <td>random data date</td>
+                  <td><input type="button" class="btn btn-danger responsbtn" value="X"></td>
+                </tr>
+                <tr>
+                  <td><a>random data TXT</a></td>
+                  <td>random data Number</td>
+                  <td>random data date</td>
+                  <td>random data date</td>
+                  <td><input type="button" class="btn btn-danger responsbtn" value="X"></td>
+                </tr>
+              </tbody>
+            </table>
+      </div>
 	</div>
