--- a/angular-src/src/app/components/page-nav/page-nav.component.html
+++ b/angular-src/src/app/components/page-nav/page-nav.component.html
@@ -1,7 +1,7 @@
 <div class="list-group">
 	<ul id="pagenavigation">
         <li class="list-group-item" [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact: true}"><a [routerLink]="['/dashboard']">Dashboard</a></li>
-        <li class="list-group-item" [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact: true}"><a [routerLink]="['/BusinessSettings']">Business settings</a></li>
+        <li class="list-group-item" [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact: true}"><a [routerLink]="['/businesssettings']">Business settings</a></li>
         <li class="list-group-item" [routerLinkActive]="['active']" [routerLinkActiveOptions] = "{exact: true}"><a [routerLink]="['/members']">Members</a></li>
 	</ul>
 </div>
