--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     	<div class="col-sm-4 col-md-3 col-xs-12">
     		<app-page-nav></app-page-nav>
     	</div>
-    	<div class="col-sm-8 col-md-9 col-xs-12" id="overview">
+    	<div class="col-sm-8 col-md-9 col-xs-12">
     		<div class="panel panel-default">
               <div class="panel-heading main-color-bg">
                 <h3 class="panel-title">Overview</h3>
