--- a/angular-src/src/app/components/login/login.component.css
+++ b/angular-src/src/app/components/login/login.component.css
@@ -10,8 +10,8 @@
 .loginbox{  
     background: white;
     color: black;    
-    margin-top: 25%;
-    left: 0;
+    margin-top: 10%;
+    margin-left: 25%;
     padding: 20px;   
     box-shadow: 0 8px 50px -2px #000;
     border-radius:5px;
