--- a/angular-src/src/app/components/memberstable/memberstable.component.css
+++ b/angular-src/src/app/components/memberstable/memberstable.component.css
@@ -15,10 +15,9 @@
 .responsbtn{
 	position: relative;
 	width: 100%;
-	max-width: 50px;
-	max-height: 40px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	opacity: 0.2;
-
 }
 
 .btn:hover {
@@ -28,4 +27,9 @@
 #addbtn {
 	max-width: 100%;
 	opacity: 1;
+}
+
+.centeralign {
+	display: flex;
+	align-items: center;
 }
