--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -1,8 +1,5 @@
 <div class="container">
-	<div id>
-		<div class="col-sm-4 col-md-3 col-xs-12">
-			<app-page-nav></app-page-nav>
-		</div>
+	<div>
 		<div class="col-sm-8 col-md-9 col-xs-12 toprow">
 			<div class="panel panel-default">
 	        	<div id="title" class="panel-heading main-color-bg">
