--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-navbar></app-navbar>
+<app-header></app-header>
+<app-page-nav></app-page-nav>
 <flash-messages id=flash-msg></flash-messages>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
