--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,48 +1,70 @@
-<div class="container">
-    <div>
-    	<div class="col-sm-4 col-md-3 col-xs-12">
-    		<app-page-nav></app-page-nav>
-    	</div>
-    	<div class="col-sm-8 col-md-9 col-xs-12">
-    		<div class="panel panel-default">
-              <div class="panel-heading main-color-bg">
-                <h3 class="panel-title">Overview</h3>
-              </div>
-                  <div class="panel-body">
-                    <div class="col-md-3">
-                      <div class="well dash-box">
-                        <h3><span class="glyphicon glyphicon-user" aria-hidden="true"></span> ?</h3>
-                        <h4>Number of Members</h4>
-                      </div>
-                    </div>
-                    <div class="col-md-3">
-                      <div class="well dash-box">
-                        <h3><span class="glyphicon glyphicon-ok" aria-hidden="true"></span> ?</h3>
-                        <h4>Number of Active Users</h4>
-                      </div>
-                    </div>
-                    <div class="col-md-3">
-                      <div class="well dash-box">
-                        <h3><span class="glyphicon glyphicon-remove" aria-hidden="true"></span> ?</h3>
-                        <h4>Number of Upaid Memberships</h4>
-                      </div>
-                    </div>
-                    <div class="col-md-3">
-                      <div class="well dash-box">
-                        <h3><span class="glyphicon glyphicon-euro" aria-hidden="true"></span> ?</h3>
-                        <h4>Sum of Unpaid Amount</h4>
-                      </div>
-                    </div>
-                </div>
-            </div>
-    	</div>
+<div class="container col-md-10">
+  <div class="panel panel-default">
+    <div class="panel-heading main-color-bg">
+      <h3 class="panel-title main-color-bg">Overview</h3>
     </div>
-    <div class="col-sm-12 col-md-12 col-xs-12">
-      <div class="panel panel-default">
-        <div class="panel-heading main-color-bg">
-            <h3 class="panel-title">Members</h3>
+    <div class="panel-body">
+      <div class="col-md-3">
+        <div class="well dash-box">
+        <h3><span class="glyphicon glyphicon-user" aria-hidden="true"></span> ?</h3>
+        <h4>Number of Members</h4>
         </div>
-        <app-memberstable></app-memberstable>
+      </div>
+      <div class="col-md-3">
+        <div class="well dash-box">
+        <h3><span class="glyphicon glyphicon-ok-circle" aria-hidden="true"></span> ?</h3>
+        <h4>Number of Active Members</h4>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="well dash-box">
+        <h3><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span> ?</h3>
+        <h4>Number of Unpaid Memberships</h4>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="well dash-box">
+          <h3><span class="glyphicon glyphicon-minus" aria-hidden="true"></span> ?</h3>
+          <h4>Total Unpaid Amount</h4>
+        </div>
       </div>
     </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading main-color-bg">
+      <h3 class="panel-title main-color-bg">Active Members</h3>
+    </div>
+    <div class="panel-body">
+      <div class="table-controls col-md-4">
+        <div class="search-box-wrapper">
+          <input type="text" class="search-box-input" placeholder="Search...">
+          <button class="search-box-btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+        </div>        
+      </div>
+      <div class="table-controls col-md-2 col-md-offset-6">
+        <button id="add-btn" class="btn btn-default" type="submit">Add Member</button>
+      </div> 
+      <br>
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Debt</th>
+            <th>Start Date</th>
+            <th>Expieres In</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><a>random data TXT</a></td>
+            <td>random data Number</td>
+            <td>random data date</td>
+            <td>random data date</td>
+            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </div>
