--- a/angular-src/src/app/components/page-nav/page-nav.component.css
+++ b/angular-src/src/app/components/page-nav/page-nav.component.css
@@ -1,4 +1,44 @@
-#pagenavigation {
-	padding-left: 0;
-	margin-top: 40px;
+#page-nav{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+#page-nav > ul {
+	margin: 0;
+	padding: 0;
+}
+
+#page-nav > ul > li {
+	list-style: none;
+	padding: 15px 10px;
+	border-bottom: 1px solid rgba(0,202,246,0.3); 
+}
+
+#page-nav > ul > li.active {
+	list-style: none;
+	padding: 15px 10px;
+	border-bottom: 1px solid rgba(0,202,246, 1); 
+}
+
+/* normal */
+#page-nav > ul > li > a{
+  color: #00caf6;
+}
+
+/* hover */
+#page-nav > ul > li > a:hover{
+  color: #ffffff;
+  text-decoration: none;
+}
+
+/* hover */
+#page-nav > ul > li.active > a{
+  color: #ffffff;
+  text-decoration: none;
+}
+
+@media (max-width: 767px) {
+  .page-nav-collapse {
+  	display: none;
+  }
 }
