responsive layout changes from last commit

--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container col-md-10">
+<div class="container col-sm-12 col-md-10">
   <div class="panel panel-default">
     <div class="panel-heading main-color-bg">
       <h3 class="panel-title main-color-bg">Overview</h3>
@@ -35,14 +35,14 @@
       <h3 class="panel-title main-color-bg">Active Members</h3>
     </div>
     <div class="panel-body">
-      <div class="table-controls col-md-4">
+      <div class="table-controls col-xs-6 col-sm-6 col-md-6">
+        <button class="btn btn-default add-btn" type="submit">Add Member</button>       
+      </div>
+      <div class="table-controls col-xs-6 col-sm-6 col-md-6">
         <div class="search-box-wrapper">
           <input type="text" class="search-box-input" placeholder="Search...">
           <button class="search-box-btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-        </div>        
-      </div>
-      <div class="table-controls col-md-2 col-md-offset-6">
-        <button id="add-btn" class="btn btn-default" type="submit">Add Member</button>
+        </div>
       </div> 
       <br>
       <table class="table table-hover">
