--- a/angular-src/src/app/components/members/members.component.html
+++ b/angular-src/src/app/components/members/members.component.html
@@ -1,5 +1,39 @@
-<div class="container">
-	<div class="col-sm-8 col-md-9 col-xs-8">
-		<app-memberstable></app-memberstable>
-	</div>
+<div class="container col-xs-12 col-md-10">
+	<div class="panel panel-default">
+	    <div class="panel-heading main-color-bg">
+	      <h3 class="panel-title main-color-bg">Members</h3>
+	    </div>
+	    <div class="panel-body">
+	      <div class="table-controls col-xs-6 col-sm-6 col-md-6">
+	        <button class="btn btn-default add-btn" type="submit">Add Member</button>       
+	      </div>
+	      <div class="table-controls col-xs-6 col-sm-6 col-md-6">
+	        <div class="search-box-wrapper">
+	          <input type="text" class="search-box-input" placeholder="Search...">
+	          <button class="search-box-btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+	        </div>
+	      </div> 
+	      <br>
+	      <table class="table table-hover">
+	        <thead>
+	          <tr>
+	            <th>Name</th>
+	            <th>Debt</th>
+	            <th>Start Date</th>
+	            <th>Expieres In</th>
+	            <th></th>
+	          </tr>
+	        </thead>
+	        <tbody>
+	          <tr>
+	            <td><a>random data TXT</a></td>
+	            <td>random data Number</td>
+	            <td>random data date</td>
+	            <td>random data date</td>
+	            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
+	          </tr>
+	        </tbody>
+	      </table>
+	    </div>
+  	</div>
 </div>
