--- a/angular-src/src/app/components/footer/footer.component.css
+++ b/angular-src/src/app/components/footer/footer.component.css
@@ -3,9 +3,10 @@
 	left: 0px;
 	right: 0px;
 	bottom: 0px;
-	position: fixed;
+	position: absolute;
 	padding-left: 15px;
 	padding-top: 5px;
 	padding-bottom: 1px;
 	z-index: 101;
+
 }
