--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -1,6 +1,8 @@
 #myCarousel {
-	position: fixed;
+	position: absolute;
 	top: 0;
 	z-index: 1;
 	height: 100%;
+	display: flex;
+	align-self: stretch;
 }
