--- a/angular-src/src/app/components/navbar/navbar.component.css
+++ b/angular-src/src/app/components/navbar/navbar.component.css
@@ -2,7 +2,7 @@
 	border-radius: 0;
 	margin-bottom: 0;
 	min-height: 33px !important;
-  position: absolute;
+  position: relative;
   top: 0;
   width: 100%;
   z-index: 100;
