--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="register2background">
+<div>
     <form (submit) = "onRegisterSubmit()"> 
         <div class="container">
             <div class="col-lg-6 col-md-6 col-sm-8  registerbox">
