--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -1,23 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 
-/* background img 
-
-{
-    background-image: url("../../assets/BGplaceholder.jepg");
-    background-repeat:no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-}
-*/
-
 html, body {
 	background: #f4f4f4;
 	height: 100%;
 	width: 100%;
+	font-family: 'Oswald', sans-serif;
 }
 
 body {
