--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -39,12 +39,14 @@
     </div>
     <div class="panel-body">
       <div class="table-controls col-xs-6 col-sm-6 col-md-6">
-        <button class="btn btn-default add-btn" type="submit">Add Member</button>       
+        <button (click)="resetErrorFlags()"class="btn btn-default add-btn" data-toggle="modal" data-target="#add-member-modal">
+        Add Member
+        </button>       
       </div>
       <div class="table-controls col-xs-6 col-sm-6 col-md-6">
         <div class="search-box-wrapper">
-          <input type="text" class="search-box-input" placeholder="Search...">
-          <button class="search-box-btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
+          <input (keyup.enter)="searchForMember(srchInput.value)" #srchInput type="text" class="search-box-input" placeholder="Search...">
+          <button (click)="searchForMember(srchInput.value)" class="search-box-btn"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
         </div>
       </div> 
       <br>
@@ -59,93 +61,86 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
-          </tr>
-
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
-          </tr>
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
-          </tr>
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
-          </tr>
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
-          </tr>
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
-          </tr>
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
-          </tr>
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
-          </tr>
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
-          </tr>
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
-          </tr>
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
-          </tr>
-          <tr>
-            <td><a>random data TXT</a></td>
-            <td>random data Number</td>
-            <td>random data date</td>
-            <td>random data date</td>
-            <td><a><span class="glyphicon glyphicon-trash"></span></a></td>
+          <tr *ngFor = "let member of members">
+            <td><a (click)="getMemberProfile(member.id)">{{member.name}}</a></td>
+            <td>{{member.debt}}</td>
+            <td>{{member.start | date:'shortDate'}}</td>
+            <td>{{member.left}}</td>
+            <td><a (click)="deleteMember(member.id)"><span class="glyphicon glyphicon-trash"></span></a></td>
           </tr>
         </tbody>
       </table>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="add-member-modal" tabindex="-1" role="dialog" aria-labelledby="Add Member">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Add New Member</h4>
+      </div>
+      <div class="modal-body">
+        <div class="col-md-12">
+          <form (keyup.enter)="addNewMember(modName.value, modPhone.value, modMail.value, modStart.value, modAmount.value)" >
+            <div class="form-group">
+              <label for="modal-name">Name: </label>
+              <input #modName type="text" class="form-control" id="modal-name" placeholder="Name">
+              <label *ngIf="errorName" for="modal-name" style="color: red; float: right; font-size: 10px;">
+              Please fill in the name
+              </label>
+            </div>
+            <div class="form-group">
+              <label for="modal-phone">Phone: </label>
+              <input #modPhone type="text" class="form-control" id="modal-phone" placeholder="Phone">
+            </div>
+            <div class="form-group">
+              <label for="modal-mail">E-mail: </label>
+              <input #modMail type="text" class="form-control" id="modal-mail" placeholder="E-mail">
+            </div>
+            <hr>
+            <div class="form-group">
+              <label for="modal-type">Type: </label>
+              <div class="dropdown">
+                <button id="modal-type" type="button" class="form-control" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  {{membershipType}}
+                  <span class="caret"></span>
+                </button>
+                <label *ngIf="errorType" for="modal-type" style="color: red; float: right; font-size: 10px;">
+                Please select membership type
+                </label>
+                <ul class="dropdown-menu" aria-labelledby="modal-type">
+                  <li *ngFor = "let membership of membershipTypes">
+                    <a (click)="membershipSelected(membership._id, membership.name, membership.cost)">
+                    {{membership.name}}
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="modal-start">Start: </label>
+              <input #modStart type="date" class="form-control" id="modal-start">
+              <label *ngIf="errorDate" for="modal-start" style="color: red; float: right; font-size: 10px;">
+              Please select the date
+              </label>
+            </div>
+            <div class="form-group">
+              <label for="modal-cost">Cost: </label>
+              <input type="text" class="form-control" id="modal-cost" value="{{membershipCost}}" disabled="">
+            </div>
+            <div class="form-group">
+              <label for="modal-amount">Amount Paid: </label>
+              <input #modAmount type="text" class="form-control" id="modal-amount" placeholder="0">
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button (click)="addNewMember(modName.value, modPhone.value, modMail.value, modStart.value, modAmount.value)" type="button" class="btn btn-primary">Add Member</button>
+      </div>
     </div>
   </div>
 </div>
