--- a/angular-src/src/app/components/business-settings/business-settings.component.css
+++ b/angular-src/src/app/components/business-settings/business-settings.component.css
@@ -1,3 +1,7 @@
+.page-nav-wrapper{
+	padding: 0;
+}
+
 .container {
 	margin-top: 20px;
 }
@@ -12,4 +16,10 @@
 .centeralign {
 	display: flex;
 	align-items: center;
+}
+
+@media (max-width: 991px) {
+  .page-nav-wrapper {
+  	display: none;
+  }
 }
