--- a/angular-src/src/app/components/business-settings/business-settings.component.html
+++ b/angular-src/src/app/components/business-settings/business-settings.component.html
@@ -1,5 +1,7 @@
-<div class="container">
-	<div class="col-sm-8 col-md-9 col-xs-8">
+<div class="page-nav-wrapper col-md-2">
+  <app-page-nav></app-page-nav>
+</div>
+<div class="container col-xs-12 col-md-10">
 		<div class="panel panel-default">
               <div class="panel-body">
 	                <div class="col-md-12 col-sm-12 col-xs-12 centeralign" >
@@ -48,6 +50,5 @@
                       </tbody>
                     </table>
               </div>
-	</div>
 	</div>
 </div>
