--- a/angular-src/src/app/components/footer/footer.component.css
+++ b/angular-src/src/app/components/footer/footer.component.css
@@ -1,11 +1,9 @@
 #footer{
-	height: 25px;
-	left: 0px;
-	right: 0px;
-	bottom: 0px;
-	position: absolute;
-	padding-left: 15px;
+	height: 30px;
+	position: relative;
 	padding-top: 5px;
 	padding-bottom: 1px;
-	z-index: 101;
+	padding-left: 15px;
+	margin-top: -30px; /* if no content */
+	clear: both;
 }
