Pricelist - AfterViewInit, Profile - Sidebar

--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -1,4 +1,9 @@
-<div class="container">
+<!-- Sidebar -->
+<div class="page-nav-wrapper col-md-2">
+  <app-page-nav></app-page-nav>
+</div>
+<!-- Content -->
+<div class="container col-sm-12 col-md-10">
 	<div>
 		<div class="col-sm-8 col-md-9 col-xs-12 toprow">
 			<div class="panel panel-default">
