--- a/angular-src/src/app/components/profile/profile.component.css
+++ b/angular-src/src/app/components/profile/profile.component.css
@@ -1,3 +1,7 @@
+.page-nav-wrapper{
+	padding: 0;
+}
+
 .container {
 	margin-top: 20px;
 }
@@ -32,4 +36,10 @@
     margin-top: -1px;
     border-radius: 0;
     position: relative;
+}
+
+@media (max-width: 991px) {
+  .page-nav-wrapper {
+  	display: none;
+  }
 }
