Login - background ideja

--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="login2background">
+<div class="login-background">
     <form (submit) = "onLoginSubmit()"> 
         <div class="container">
             <div class="col-lg-6 col-md-6 col-sm-8  loginbox">
