--- a/angular-src/src/app/components/login/login.component.css
+++ b/angular-src/src/app/components/login/login.component.css
@@ -1,11 +1,8 @@
-.login2background{
-    background-image: url("../../assets/BGplaceholder.jpg");
+.login-background{
+    background-image: url("../../assets/Background.png");
     background-repeat:no-repeat;
-    background-attachment: fixed;
     background-size: 100% 100%;
-    height: 100%;
-    width: 100%;
-    position: fixed;
+    position: relative;
 }
 .loginbox{  
     background: white;
